[metadata]
name = frodo
summary = A black-box isolation checker for SQL databases
description-file =
    README.md
    CHANGELOG.md
home-page = https://github.com/SUSE/sesdev
requires-dist = setuptools
license = MIT License
license_file = LICENSE
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Database :: Database Engines/Servers
    Topic :: System :: Distributed Computing
    Topic :: Utilities

[options]
install_requires =
    Click >= 6.7
    coloredlogs >= 14.0
    humanfriendly >= 8.2
    mysql-connector >= 2.2.9
    networkx >= 2.5

packages =
    frodo

[options.entry_points]
console_scripts =
    frodo = frodo:frodo_main

[options.extras_require]
dev =
    black >= 20.8b1
    mypy >= 0.782
    pytest >= 6.1
    tox >= 3.20

[tool:pytest]
testpaths = tests